Fixed the courses' spacing

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:visited {
 
 .specializations {
     position: relative;
-    top: 40px;
+    top: 60px;
     left: 45px;
     font-size: 19px;
     font-weight: 700;
@@ -60,14 +60,14 @@ a:visited {
 
 .specializations-list {
     position: relative;
-    top: 40px;
-    left: 40px;
+    top: 80px;
+    left: 80px;
     font-size: 19px;
 }
 
 .read-more-link {
     position: relative;
-    top: 50px;
+    top: 100px;
     left: 340px;
     font-weight: 700;
     font-size: 19px;
@@ -184,7 +184,7 @@ a:visited {
 #b-arts-header {
     height: 35px;
     width: 450px;
-    padding-top: 7px;
+    padding-top: 3px;
     background-color: black;
     color: white;
     text-align: center;
@@ -195,8 +195,8 @@ a:visited {
 #m-arts-header {
     height: 35px;
     width: 450px;
-    padding-top: 7px;
-    background-color: blue;
+    padding-top: 3px;
+    background-color: rgb(0, 0, 190);
     color: white;
     text-align: center;
     font-weight: 700;
@@ -204,14 +204,14 @@ a:visited {
 }
 
 #b-arts-content {
-    height: 260px;
+    height: 300px;
     width: 450px;
     background-color: rgb(240, 240, 240);
     margin-top: -5px;
 }
 
 #m-arts-content {
-    height: 260px;
+    height: 300px;
     width: 450px;
     background-color: rgb(220, 220, 220);
     margin-top: -5px;
